# plant

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/plant/: __init__.py  cli.py
configs/: main.yml
examples/raylib/: CMakeLists.txt  main.c
include/plant/core/: transforms.hpp
include/plant/filters/: kalman_filter.hpp
include/plant/math/: matrix.hpp  quaternion.hpp  vector.hpp
include/plant/sensors/: imu.hpp
include/plant/utils/: parser.hpp
notebooks/: sim.py
scripts/: build-ci.sh  build.sh  test.sh
src/: cli.c  cli.cc  plant.cc
src/core/: core.cc  structs.h  transforms.cc  transforms.cpp  transforms.h  types.h
src/filters/: kalman_filter.cpp
src/math/: quaternion.cpp  vector.cpp
src/plant.egg-info/: PKG-INFO  SOURCES.txt
src/python/: plant.cpp
src/sensors/: imu.cc  imu.cpp  imu.h
src/utils/: cli.c  parser.cc  parser.cpp  parser.h
tests/: parser_test.cc  test_cli.py  test_imports.py  test_imu.py  test_plant.py  test_quaternion.py  test_structs.py  test_types.py  test_v3f.py  v3f_test.cc  v3f_test.cpp
