[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plant"
version = "0.0.1"
authors = [
  { name = "Anthony Gardner" },
]
maintainers = [
  { name = "Anthony Gardner" },
]
description = "Python Library for Autonomous Navigation and Tracking"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "commitizen>=4.8.3",
  "pytest>=7.0.0",
]

[project.scripts]
plant = "plant.cli:app"

[project.optional-dependencies]
cli = [
    "rich>=10.0.0",
    "tabulate>=0.9.0",
    "typer>=0.16.0",
]

all = [
    "plant[cli]"
]

[tool.setuptools]
package-dir = {"" = "api"}
packages = ["plant"]

[tool.setuptools.package-data]
plant = ["*.so"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s"
testpaths = ["tests"]

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
